Изучаем html,CSS. Повторяем основы pyton.

--- a/html_css/теги.html
+++ b/html_css/теги.html
@@ -1,20 +1,38 @@
-<meta charset="UTF-8">
+<!--Справочник тегов и css-->
+<!--https://webref.ru/-->
+<!--теги в HTML 5-->
+<!--https://html5css.ru/html/html5_semantic_elements.php-->
+<!--Что бы автоматечески создать структуру вводим html:5-->
+<!doctype html>
+<html lang="en">
+<!--head настройка страницы и данные css-->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Учебный проект</title>                                 <!-- название документа во вкладке браузера-->
+    <meta name="description" content="Изучаем работу CSS и html"> <!--Данное описание отображается при поиске в гугл-->
+    <link rel="stylesheet" href="style.css">                      <!--подключили css файл-->
 
-<style>
-    p{
-        color:
-    }
-</style>
-<!--Параграф-->
-<p>Это параграф</p>
+</head>
+<body>                                 <!--body содержит описание самой страницы-->
+    <header></header>
+    <p>Это параграф</p>
 
-<!--Заголовок-->
-<!--Самый главный заголовок по нему работает поисковик-->
-<h1>Это заголовок Первого уровня</h1>
-<!--всех остальных заголовков следующего уровня после 1 может быть больше одного-->
-<!--C каждым уровнем будет уменьшаться шрифт заголовка-->
-<h2>Это заголовок второго уровня</h2>
-<h3>Это заголовок третьего уровня C каждым уровнем будет уменьшаться шрифт заголовка</h3>
-<!--<h4></h4>-->
-<!--<h5></h5>-->
-<!--<h6>Это заголовок шестого уровня</h6>-->
+    <h1>Это заголовок Первого уровня</h1>  <!--Самый главный заголовок по нему работает поисковик-->
+    <h2>Это заголовок второго уровня</h2> <!--всех остальных заголовков следующего уровня после 1 может быть больше одного-->
+    <h3>Это заголовок третьего уровня C каждым уровнем будет уменьшаться шрифт заголовка</h3>
+
+    <!--dev контейнер уоторый содержит элементы внутри себя-->
+    <div class="box-1">                <!-- Задали класс в div что бы могли работать в стилях с разными div-->
+        <p>Это первый контейнер</p>
+    </div>
+
+    <div class="box-2">               <!-- Задали класс в div что бы могли работать в стилях с разными div-->
+        <p>Это второй контейнер</p>
+    </div>
+
+
+</body>
+</html>
